# chive

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml
.cargo/: config.toml
benches/: generate_turns.rs  generate_turns_2.rs
proptest-regressions/engine/: parse.txt
src/: bug.rs  game.rs  hex.rs  hive.rs  lib.rs  main.rs  parse.rs  pathfinding.rs  zobrist.rs
src/engine/: ai.rs  bug.rs  canonicalizer.rs  game.rs  hex.rs  hive.rs  mod.rs  parse.rs  pathfinding.rs  row_col.rs  save_game.rs  zobrist.rs
src/graphics/: hexagonal_prism.rs  mod.rs
