[package]
name = "chive"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
minimax = "0.5.4"
rand = "0.9.2"
rustc-hash = "2.1.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.profiling]
inherits = "release"
debug = true
