[package]
name = "chive"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
minimax = "0.5.4"
rand = "0.9.2"
rustc-hash = "2.1.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
ratatui = "0.30.0-beta.0"
humantime = "2.3.0"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.9.0"

[profile.game-dev]
inherits = "dev"
opt-level = 1

[profile.game-dev.package."*"]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
